--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Wrong Turn(REAL BLACK BELT GAME)</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="jumpscare" href="Res/jumpscare.mp4">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
